streamrestore: workaround for notification volume

stream_restore_subscribe has not been implemented on pipewire yet.
Since streamrestore relies on the call back to update the volume slider
and mute button status, users are unable to interact with those.
This workaround uses the cached values instead.

BUG: 473013