src/streamrestore.cpp
@@ -78,7 +78,12 @@ void StreamRestore::setDevice(const QString &device)
 
 qint64 StreamRestore::volume() const
 {
-    return m_volume.values[0];
+    // FIXME: workaround for pipewire not supportting stream restore subscription
+    if (m_cache.valid) {
+        return m_cache.volume.values[0];
+    } else {
+        return m_volume.values[0];
+    }
 }
 
 void StreamRestore::setVolume(qint64 volume)
@@ -104,7 +109,12 @@ void StreamRestore::setVolume(qint64 volume)
 
 bool StreamRestore::isMuted() const
 {
-    return m_muted;
+    // FIXME: workaround for pipewire not supportting stream restore subscription
+    if (m_cache.valid) {
+        return m_cache.muted;
+    } else {
+        return m_muted;
+    }
 }
 
 void StreamRestore::setMuted(bool muted)
